--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.2.5
   firebase_storage: ^11.0.10
   firebase_database: ^10.0.9
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
