--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_maps_flutter: ^2.2.4
   google_maps_flutter_web: ^0.4.0+6
   location: ^4.4.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
