--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^4.0.3
   google_maps_flutter: ^2.2.4
   google_maps_flutter_web: ^0.4.0+6
+  flutter_spinkit: ^5.1.0
   location: ^4.4.0
   geolocator: ^9.0.2
 
