date picker test on profile

--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   location: ^4.4.0
   geolocator: ^9.0.2
+  calendar_date_picker2: ^0.4.5
 
 dev_dependencies:
   flutter_test:
