report_main navigation indicator and arrows
also updated gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,6 @@ HanApp_Flutter/hanapp/pubspec.lock
 HanApp_Flutter/hanapp/pubspec.lock
 *.lock
 *.yaml
+HanApp_Flutter/hanapp/macos/Flutter/GeneratedPluginRegistrant.swift
+HanApp_Flutter/hanapp/windows/flutter/generated_plugin_registrant.cc
+HanApp_Flutter/hanapp/windows/flutter/generated_plugins.cmake
