--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geolocator: ^9.0.2
   shared_preferences: ^2.0.18 # shared preferences for state management
   calendar_date_picker2: ^0.4.5
+  image_picker: ^0.8.7 # for uploading camera
 
 dev_dependencies:
   flutter_test:
