--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.0.18 # shared preferences for state management
   calendar_date_picker2: ^0.4.5
   image_picker: ^0.8.7 # for uploading camera
+  syncfusion_flutter_signaturepad: ^21.1.35
 
 dev_dependencies:
   flutter_test:
