pic file display name

--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   calendar_date_picker2: ^0.4.5
   image_picker: ^0.8.7 # for uploading camera
   syncfusion_flutter_signaturepad: ^21.1.35
+  file_picker: ^5.2.6
 
 dev_dependencies:
   flutter_test:
