--- a/.gitignore
+++ b/.gitignore
@@ -289,3 +289,4 @@ HanApp_Flutter/hanapp/pubspec.lock
 HanApp_Flutter/hanapp/macos/Flutter/GeneratedPluginRegistrant.swift
 HanApp_Flutter/hanapp/windows/flutter/generated_plugin_registrant.cc
 HanApp_Flutter/hanapp/windows/flutter/generated_plugins.cmake
+.DS_Store
