--- a/HanApp_Flutter/pnphanapp/pubspec.yaml
+++ b/HanApp_Flutter/pnphanapp/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   flutter_spinkit: ^5.1.0
+  firebase_core: ^2.9.0
+  firebase_database: ^10.1.0
 
 dev_dependencies:
   flutter_test:
