create default pnp accounts

--- a/HanApp_Flutter/pnphanapp/pubspec.yaml
+++ b/HanApp_Flutter/pnphanapp/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   firebase_core: ^2.9.0
   firebase_database: ^10.1.0
+  firebase_auth: ^4.4.1
 
 dev_dependencies:
   flutter_test:
