--- a/HanApp_Flutter/pnphanapp/pubspec.yaml
+++ b/HanApp_Flutter/pnphanapp/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_database: ^10.1.0
   firebase_auth: ^4.4.1
+  maps_toolkit: ^2.0.1
 
 dev_dependencies:
   flutter_test:
