--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   syncfusion_flutter_signaturepad: ^21.1.35
   file_picker: ^5.2.6
   geocoding: ^2.1.0
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
