--- a/HanApp_Flutter/pnphanapp/pubspec.yaml
+++ b/HanApp_Flutter/pnphanapp/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_database: ^10.1.0
   firebase_auth: ^4.4.1
   maps_toolkit: ^2.0.1
+  image_network: ^2.5.1
 
 dev_dependencies:
   flutter_test:
