--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   file_picker: ^5.2.6
   geocoding: ^2.1.0
   path_provider: ^2.0.14
+  firebase_messaging: ^14.4.1
 
 dev_dependencies:
   flutter_test:
