foreground/background notif baseline

--- a/HanApp_Flutter/hanapp/android/app/src/main/AndroidManifest.xml
+++ b/HanApp_Flutter/hanapp/android/app/src/main/AndroidManifest.xml
@@ -40,5 +40,8 @@
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyB6WcpEZvWnvfQxA0HK_tV0FB9jSL9fj7Y"/>
 
+        <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="high_importance_channel" />
+
     </application>
 </manifest>
