--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   firebase_messaging: ^14.4.1
   flutter_local_notifications: ^14.0.0+1
   maps_toolkit: ^2.0.1
+  url_launcher: ^6.1.11
+  
 
 dev_dependencies:
   flutter_test:
