under construction - hyperlink

--- a/HanApp_Flutter/hanapp/android/app/src/main/AndroidManifest.xml
+++ b/HanApp_Flutter/hanapp/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
    <application
         android:label="hanapp"
         android:name="${applicationName}"
@@ -42,6 +43,19 @@
 
         <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="high_importance_channel" />
-
     </application>
+
+    <!-- Provide required visibility configuration for API level 30 and above -->
+    <queries>
+    <!-- If your app checks for SMS support -->
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="sms" />
+    </intent>
+    <!-- If your app checks for call support -->
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="tel" />
+    </intent>
+    </queries>
 </manifest>
