--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -61,9 +61,10 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.13.1"
+  # flutter_launcher_icons: "^0.13.1"
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
