--- a/HanApp_Flutter/pnphanapp/pubspec.yaml
+++ b/HanApp_Flutter/pnphanapp/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.4.1
   maps_toolkit: ^2.0.1
   image_network: ^2.5.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
