--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   expandable_page_view: ^1.0.17
   flutter_phone_direct_caller: ^2.1.1
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
