--- a/HanApp_Flutter/hanapp/pubspec.yaml
+++ b/HanApp_Flutter/hanapp/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   expandable_page_view: ^1.0.17
   flutter_phone_direct_caller: ^2.1.1
   permission_handler: ^10.2.0
+  lottie: ^2.3.2
 
 dev_dependencies:
   flutter_lints: ^2.0.1
